v1.3.1, 2016-05-19

* fix windows build due to lack of support of C99 in MSVC

v1.3.0, 2016-05-19

* change to setuptools for installation/package building
* major code cleanup (remove of duplicated code using Clone Digger)
  http://clonedigger.sourceforge.net
* bug fixes in Alloy initialization
* documentation building now requires numpydoc
* central version number in VERSION file (also available in the package after
  importing: import xrayutilities as xu; xu.__version__
* new examples using the new XRR and XRD simulation-code
* improve handling of SiGe and AlGaAs alloy: alloying on atomic level
* add relaxation parameter to PseudomoprhicMaterial to model partially relaxed
  material
* fix fwhm_exp for very narrow peaks
* fitting of x-ray reflectivity using the lmfit package.
  If you want to use this new feature you have to install lmfit
  see https://pypi.python.org/pypi/lmfit/
* new subpackage simpack for diffraction and reflectivity simulations from
  thin film samples. So far implemented are
  - a basic kinematical diffraction model
  - two dynamical diffraction models (simplified and general 2-beam theory)
  - a model for specular reflectivity calculations using a Parrat-like
    formalism
* fwhm_exp function was moved to math's subpackage! This was necessary in
  order to avoid circular dependencies, but anyhow the function also
  fits better there!
* improvements of peak_fit function
  - better ability to handle linear background
  - more stable fitting due to use of deriavitives (PseudoVoigt)
* minor improvement in peak_fit's plotting

v1.2.1, 2016-01-08

* Uiso parsing from CIF files for better structure factors
* support for parsing Rigaku RAS files (Smartlab Guidance)
* new getDetectorPos/Distance routines in QConversion
  This can be used for all types of detectors to determine their position and
  distance for data normalization purposes
* add FuzzyGridder3D class
* add FuzzyGridder2D class (see mailing-list for details)